--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,9 +42,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.0.0'
 
     // Google
-    compile 'com.google.android.gms:play-services-auth:10.0.0'
-    compile 'com.google.android.gms:play-services-appinvite:10.0.0'
-    compile 'com.google.android.gms:play-services-ads:10.0.0'
+    compile 'com.google.android.gms:play-services-auth:10.0.1'
+    compile 'com.google.android.gms:play-services-appinvite:10.0.1'
+    compile 'com.google.android.gms:play-services-ads:10.0.1'
 
     // Firebase
     compile 'com.google.firebase:firebase-database:10.0.0'
@@ -53,6 +53,7 @@ dependencies {
     compile 'com.google.firebase:firebase-messaging:10.0.0'
     compile 'com.google.firebase:firebase-crash:10.0.0'
     compile 'com.google.firebase:firebase-appindexing:10.0.0'
+    compile 'com.google.firebase:firebase-analytics:10.0.0'
 
     // Firebase UI
     compile 'com.firebaseui:firebase-ui-database:0.4.0'
